--- a/style.css
+++ b/style.css
@@ -77,3 +77,11 @@ body{
   font-weight: 400;
   color: #FF465A;
 }
+
+@media only screen and (max-width:375px) {
+  .search-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
